--- a/day9/semantic/semantic.html
+++ b/day9/semantic/semantic.html
@@ -6,20 +6,66 @@
     <title>Document</title>
     <link rel="stylesheet" href="../reset.css" />
     <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="first.css" />
+    <link rel="stylesheet" href="second.css" />
+    <link rel="stylesheet" href="third.css" />
   </head>
   <body>
+    <aside><button class="info">채용공고 보러가기</button></aside>
+
     <header>
-      <nav>ABLYTEAM</nav>
-      <button class="pink">에이블리</button>
-      <button>팀 문화</button>
-      <button>소식</button>
-      <button>채용공고</button>
-      <button>FAQ</button>
+      <nav>
+        <div class="logo">ABLYTEAM</div>
+        <div class="links">
+          <button class="pink">에이블리</button>
+          <button>팀 문화</button>
+          <button>소식</button>
+          <button>채용공고</button>
+          <button>FAQ</button>
+        </div>
+      </nav>
     </header>
     <main>
-      <section></section>
-      <section></section>
-      <section></section>
+      <section class="first">
+        <div class="contents">
+          <h2>당신의 넥스트커머스는<br />무엇인가요?</h2>
+        </div>
+      </section>
+      <section class="second">
+        <div class="contents">
+          <h2>
+            누구나 쉽게<br />나만의 스타일을 판매하고 구매하는<br />셀러와
+            유저가 상생하는 스타일 생태계
+          </h2>
+          <h2>바로 ABLY가 그리는 <span>NEXT COMMERCE</span> 입니다</h2>
+        </div>
+      </section>
+      <section class="third">
+        <div class="head">
+          <h6>미션</h6>
+          <h2>
+            스타일 커머스와 체인플랫폼을 <br />
+            글로벌로 확장합니다
+          </h2>
+        </div>
+      </section>
+      <section class="main">
+        <div class="contents a">
+          <div class="photo one">
+            <span>스타일 커머스</span> 다양한 취향을 발견할 수 있는 <br />
+            커머스 플랫폼
+            <button>자세히 보기</button>
+          </div>
+        </div>
+
+        <div class="contents b">
+          <div class="photo two">
+            <span>체인 플랫폼</span> 나만의 상품을 쉽게 제작하고 <br />
+            유통할 수 있는 세상
+            <button>자세히 보기</button>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
